# batchrenorm

./: .pre-commit-config.yaml  README.org  pyproject.toml
.github/workflows/: build.yml
batchrenorm/: __init__.py  batchrenorm.py
tests/: conftest.py  test_batchrenorm.py
