[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.poetry]
name = "batchrenorm"
version = "0.1.0"
description = "Batch Renormalization"
authors = ["Ludvig Bergenstråhle <jlbergenstrahle@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.0"
torch = "^1.3"

[tool.poetry.dev-dependencies]
pre-commit = "^1.20.0"
pytest = "^5.3"
pytest-cov = "^2.8.1"
